# media_fundation

./: .gitignore  CMakeLists.txt  CameraCapture.cpp  CameraCapture.h  MFH264RoundTrip.cpp  MFTCodecHelper.cpp  MFTCodecHelper.h  MFUtility.h  Render.cpp  Render.h  main.cpp  readme.md
